src/test/deca/context/invalid/intermediaire2/test-complementaire/32or.deca
// Description:
//  Programme avec une chaine dans une condition générant une erreur
//
// Resultats:
//  32or.lis 
// 
// Historique:
//    cree le 10/06/2022

{
  int x = 14;
  print (x);
  if (x <= 19 || "coucou") {
    print ( " est" );
  } else {
    print ( " n'est pas " );
  }
  println ( " dans [15,19]" );
}
